[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/img/cancel.png" type="Texture" id=1]
[ext_resource path="res://layouts/ExitBtn/ExitBtn.gd" type="Script" id=2]

[node name="ExitBtn" type="MarginContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -60.0
margin_bottom = 60.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="."]
margin_top = 20.0
margin_right = 40.0
margin_bottom = 60.0
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
